Chess Club/src/objects/Contact__c.object
<CustomObject>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email_Address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Person_del__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Contact Details</relationshipLabel>
        <relationshipName>Contacts_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Contact Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Person_del__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Contact#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>